improved enhanced research
